# arbitration_busd-usdt

./: data_manager.py  eslr.py  main.py  make_signal.py  models.py  simple.py
v4/: CMakeCache.txt  CMakeLists.txt  MM_Simple.settings.txt  Makefile  cmake_install.cmake  data_manager.h  data_row.h  exchange.h  main  main.cpp  main.out  main_executor.h  output.txt  settings.txt  signal.h
v4/models/: IModel.h  I_ML_Model.h  feature_printer.h  limit_price_predict.h  ml_simple.h  mm_simple.h
v4/models/features/: IFeature.h  averager.h  convert_feature.h  data_choosers.h  feature_manager.h  mean_convert_feature.h  mean_price_feature.h  mean_volume_feature.h  price_feature.h  repeater.h  volume_feature.h
v4/models/features/targets/: ITarget.h  limit_price.h
v4/research/: 1.ipynb  Без названия.ipynb
v4/research/.ipynb_checkpoints/: 1-checkpoint.ipynb  Без названия-checkpoint.ipynb
v4/settings/: FeaturePrinter.settings.txt  LimitPricePredictor.settings.txt  ML_Simple.settings.txt  MM_Simple.settings.txt  feature.settings.txt  main.settings.txt  target.settings.txt
v4/solvers/: ELR.h  ema.h  parameters_parser.h  queue_max.h
